# WHITECAT_opensource

./: README.md
audiere-1.9.5/: ChangeLog  Makefile.am  Makefile.in  audiere.pc  configure  configure.ac
audiere-1.9.5/doc/: Makefile.in
audiere-1.9.5/examples/: Makefile.in
audiere-1.9.5/src/: Makefile.in  audiere.h  debug.cpp  utility.cpp
audiere-1.9.5/test/: Makefile.in
openlayer-2.1/: CMakeLists.txt  INSTALL  README  buildme.bat  cbuild.c  default.cbd
openlayer-2.1/Manual/: Bitmap.html  Blenders.html  Collision.html  CrystalStyle.css  FpsCounter.html  Placement.html  RenderMode.html  Rgba.html  Settings.html  Setup.html  Shape.html  TextRenderer.html  Vec2D.html  index.html
openlayer-2.1/Manual/Bitmap/: BlitDistorted.html  BlitTransformed.html  Destroy.html  FastBlit.html  FinishFastBlitting.html  GetDefaultPivot.html  HasAlphaChannel.html  Load.html  SendToGPU.html  SetDefaultPivot.html  TexturedQuad.html  UnloadFromGPU.html
openlayer-2.1/Manual/Canvas/: DisableClipping.html  Fill.html  GetClippingRegion.html  GetMemoryBitmap.html  Push.html  Refresh.html  SetClipping.html  SetPixelWriteMode.html  SetTo.html
openlayer-2.1/Manual/Circle/: DrawArc.html  SetRadius.html
openlayer-2.1/Manual/Collision/: GetNormal.html  GetPoint.html  GetSegment.html
openlayer-2.1/Manual/Ellipse/: Circle.html  Draw.html  DrawArc.html  GetRadius.html  SetRadius.html
openlayer-2.1/Manual/FpsCounter/: GetDeltaTime.html  GetFps.html  Pause.html  Start.html
openlayer-2.1/Manual/Line/: Draw.html
openlayer-2.1/Manual/LineStrip/: AddToBegin.html  AddToEnd.html  DeleteLast.html  Draw.html  GetVertex.html  SetTexture.html
openlayer-2.1/Manual/Placement/: GetDistance.html  GetRotation.html  GetStretch.html  RotateBy.html  SetRotation.html  StretchBy.html
openlayer-2.1/Manual/Point/: Draw.html  DrawFast.html
openlayer-2.1/Manual/Poly/: Collides.html  CollisionPoly.html  DrawOutline.html  GetCollision.html  GetPivot.html  GetVertex.html  GetVertices.html  TexturedPoly.html
openlayer-2.1/Manual/Rect/: Draw.html
openlayer-2.1/Manual/RenderMode/: AlphaFrom.html  ClippedMode.html  Flipped.html  FlippedMode.html  MultiMode.html  SliceExpanded.html  SliceMultiplyMode.html
openlayer-2.1/Manual/Rgba/: InterpolateWith.html  Packed.html  WithAlpha.html
openlayer-2.1/Manual/Settings/: SetAntialiasing.html  SetCollisionPolyAccuracy.html  SetCollisionPolyAlphaLimit.html  SetTextureMapping.html  StoreMemoryBitmaps.html
openlayer-2.1/Manual/Setup/: GetColorDepth.html  GetExecutablePath.html  GetWindowHeight.html  GetWindowWidth.html  IsProgramSetUp.html  IsScreenSetUp.html  SetupProgram.html  SetupScreen.html  ToAbsolutePathname.html
openlayer-2.1/Manual/Shape/: Draw.html  Line.html  LineStrip.html  Point.html  Rect.html  RotateBy.html  TransformBy.html
openlayer-2.1/Manual/TextRenderer/: FirstLineWidth.html  GetColor.html  GetFace.html  GetItalics.html  SetColor.html  UnloadFromGPU.html  UseAutoDelete.html
openlayer-2.1/Manual/Transforms/: PushPlacement.html  ResetTransforms.html  SetRotationPivot.html  SetStretch.html  SetTintColor.html
openlayer-2.1/Manual/Vec2D/: Normalized.html
openlayer-2.1/demos/: CMakeLists.txt
openlayer-2.1/demos/collisiondemo/: main.cpp
openlayer-2.1/demos/gamedemo/: Demo.cpp  Makefile
openlayer-2.1/demos/gameloop/: Main.cpp  Makefile
openlayer-2.1/demos/linestripdemo/: Main.cpp  Makefile
openlayer-2.1/demos/renderbitmap/: Main.cpp  Makefile
openlayer-2.1/demos/shapedemo/: Main.cpp
openlayer-2.1/demos/textdemo/: Main.cpp  Makefile
openlayer-2.1/include/: OpenLayer.hpp
openlayer-2.1/include/OpenLayer/: Canvas.hpp  Circle.hpp  Collisions.hpp  Effects.hpp  FpsCounter.hpp  GfxRend.hpp  Internal.hpp  Line.hpp  LineStripRender.hpp  Matrix.hpp  Placement.hpp  Point.hpp  Polygon.hpp  RawLineStrip.hpp  Rectangle.hpp  Settings.hpp  Shape.hpp  TransformMatrix.hpp  Transforms.hpp  Vec2D.hpp  VertexListCollision.hpp
openlayer-2.1/src/: Animation.cpp  Bitmap.cpp  Blenders.cpp  Canvas.cpp  Circle.cpp  Collisions.cpp  Effects.cpp  FpsCounter.cpp  Framebuffer.cpp  GarbageCollector.cpp  General.cpp  GfxRend.cpp  GlDriver.cpp  Glyph.cpp  Internal.cpp  Line.cpp  LineStrip.cpp  Matrix.cpp  Placement.cpp  Point.cpp  Polygon.cpp  Rectangle.cpp  RenderModes.cpp  Rgba.cpp  Settings.cpp  Setup.cpp  Shape.cpp  TextRenderer.cpp  TextureInfo.cpp  TexturedPoly.cpp  Transforms.cpp  loadpng.c  regpng.c  savepng.c
openlayer-2.1/utils/glyphkeeper/: CMakeLists.txt  authors.txt  changes.txt  readme.txt
openlayer-2.1/utils/glyphkeeper/src/: glyph_internal.h  glyph_to_allegro.c  glyph_to_sdl_rect.c  glyph_workout.c
sources/: CFG_config_panel_7.cpp  CFG_config_panel_8.cpp  CFG_screen.cpp  CORE_6.cpp  Call_everybody_5.cpp  CodeBlocks_win32_whitecat.cbp  CodeBlocks_win32_whitecat_relativpath.cbp  Doxyfile  Draw3.cpp  MAIN_juin_2013_opensource (Copie en conflit de christoph guillermet 2013-07-08).cpp  MAIN_juin_2013_opensource.cpp  MAIN_juin_2013_opensource_kbd.cpp  MAIN_nov_2013_opensource_kbd.cpp  Makefile.win  README.md  README.txt  WhiteCat_OpenVersion.dev  WhiteCat_private.h  WhiteCat_private.rc  affectations midi.txt  allegro-manual-4.2.1.en.chm  allegro-manual-4.2.1.en.chw  arduino_6_UNO.cpp  arduino_6_UNO_anton.cpp  arduino_6_UNO_anton2.cpp  arduino_core_6_UNO.cpp  arduino_core_6_UNO_anton.cpp  arduino_core_6_UNO_anton2.cpp  arduino_core_6_UNO_anton3.cpp  arduino_device_core.cpp  audio_core3.cpp  audio_core4.cpp  audio_core5.cpp  audio_visu2.cpp  audio_visu3.cpp  audio_visu4.cpp  banger_core_8.cpp  banger_visu_8.cpp  channels_10_visu.cpp  channels_9_core.cpp  (+73 more)
sources/borderless06/: Makefile  alleggl.borderless.patch  colors.cpp  lathe.c  monitor.c  monitor.h  openlayer-2.1.borderless.patch  readme.txt  window.c  window.h
sources/dashard/: _DasHard.h
sources/enttec_pro/: pro_driver.h  pro_driver_pro.h  usb_pro_example.cpp
sources/jpgalleg-2.5/: fix.bat  fix.sh  makefile.all  makefile.be  makefile.dj  makefile.mgw  makefile.osx  makefile.uni  makefile.vc  readme.txt
sources/libharu-2.0.8/: CHANGES  README  TODO  libhpdf.lib
wccp/src/: CFG_screen.cpp  (+46 more)
(+421 files in other folders)
